    * bonobo/Makefile.am:
    * daemon/Makefile.am:
    * libcryptui/cryptui.h:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-key.h:
    * plugins/gedit/Makefile.am:
    * plugins/nautilus/Makefile.am:
    * plugins/nautilus-ext/Makefile.am:
    * src/Makefile.am: Move SKEY_FLAGS_* to libcryptui, and use new flags 
    throughout seahorse (to guarantee consistency).
    
2005-12-14  Nate Nielsen  <nielsen@memberwebs.com>

    * libcryptui/Makefile.am:
    * libcryptui/cryptui-key-chooser.c:
    * libcryptui/cryptui-key-chooser.h:
    * libcryptui/cryptui-key-store.h:
    * libcryptui/tests/cryptui-test-ui.c: Beginnings of the Key Chooser

2005-12-14  Nate Nielsen  <nielsen@memberwebs.com>

    * daemon/seahorse-service.c: Proper listing of keysets even when
    no keys of that type exist 
    * libcryptui/cryptui-key-combo.c:
    * libcryptui/cryptui-key-list.c:
    * libcryptui/cryptui-key-list.h:
    * libcryptui/cryptui-key-store.c:
    * libcryptui/cryptui-key-store.h:
    * libcryptui/cryptui-test-ui.c: Added 'none-option' to key store/combo box.
    Made check boxes work. Default sort order for all UI key listings. 
    
2005-12-14  Nate Nielsen  <nielsen@memberwebs.com>

    * libcryptui/Makefile.am:
    * libcryptui/cryptui-key-combo.c:
    * libcryptui/cryptui-key-combo.h:
    * libcryptui/cryptui-key-list.c:
    * libcryptui/cryptui-key-list.h:
    * libcryptui/cryptui-key-store.c:
    * libcryptui/cryptui-key-store.h:
    * libcryptui/cryptui-keyset.c:
    * libcryptui/cryptui-keyset.h:
    * libcryptui/cryptui.c:
    * libcryptui/cryptui.h:
    * libcryptui/tests/cryptui-test-keyset.c:
    * libcryptui/tests/cryptui-test-ui.c:
    * libseahorse/seahorse-key.h:
    * libseahorse/seahorse-pgp-key.c:
    * libseahorse/seahorse-pgp-key.h:
    * libseahorse/seahorse-ssh-key.c:
    * libseahorse/seahorse-ssh-key.h: More DBUS/libcryptui work. Implemented caching
    of key properties client side. Added cryptui-key-list.*
    