@@ -11,6 +11,15 @@
     * plugins/nautilus-ext/Makefile.am:
     * src/Makefile.am: Move SKEY_FLAGS_* to libcryptui, and use new flags 
     throughout seahorse (to guarantee consistency).
+    * libcryptui/cryptui-key-chooser.c:
+    * libcryptui/cryptui-key-list.c:
+    * libcryptui/cryptui-key-list.h:
+    * libcryptui/cryptui-key-store.c:
+    * libcryptui/cryptui-key-store.h:
+    * libcryptui/cryptui-keyset.c:
+    * libcryptui/cryptui-keyset.h:
+    * libcryptui/cryptui-test-keyset.c: Support retrieving key flags. Only show 
+    appropriate keys in key chooser. Support setting selection on chooser/list.
     
 2005-12-14  Nate Nielsen  <nielsen@memberwebs.com>
 
